--- a/Aula_02/html_code/index.html
+++ b/Aula_02/html_code/index.html
@@ -8,7 +8,7 @@
     <title>API com HTML</title>
   </head>
   <body>
-    <div class="center">
+    <div clss="center">
       <form action="http://localhost:8080/testeGETHTML" method="post">
         <h1>Insira o nome</h1>
         <input type="text" name="name" id="name" placeholder="Insira seu nome aqui..."/>
